force-app/main/default/objects/cgcloud__Account_Extension__c/cgcloud__Account_Extension__c.object-meta.xml
<CustomObject>
    <description>Object to record account roles and further product related attributes.</description>
    <label>Customer Extension</label>
    <nameField>
        <displayFormat>AEX-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>