force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Account_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Plan_Type__c</fullName>
    <description>Specifies the level of the customer in the trade org hierarchies which is used for aggregation of KPIs.</description>
    <label>Account Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>