force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Bill_To_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bill_To_Role_Valid_From__c</fullName>
    <description>From this date on the Bill To Role is valid.</description>
    <label>Bill To Role Valid From</label>
    <type>Date</type>
</CustomField>