force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Bill_To_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bill_To_Role_Valid_Thru__c</fullName>
    <description>Until this date the Bill To Role is valid.</description>
    <label>Bill To Role Valid Thru</label>
    <type>Date</type>
</CustomField>