force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Broker_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Broker_Role_Valid_From__c</fullName>
    <description>From this date on the Broker Role is valid.</description>
    <label>Broker Role Valid From</label>
    <type>Date</type>
</CustomField>