force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Broker_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Broker_Role_Valid_Thru__c</fullName>
    <description>Until this date the Broker Role is valid.</description>
    <label>Broker Role Valid Thru</label>
    <type>Date</type>
</CustomField>