force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Class_Of_Trade__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Class_Of_Trade__c</fullName>
    <description>Reference to the account the company segment belongs to.</description>
    <label>Class Of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>DrugStores</fullName>
            </value>
            <value>
                <fullName>DiscountStores</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>ConvenienceStores</fullName>
            </value>
            <value>
                <fullName>CategorySpecialist</fullName>
            </value>
            <value>
                <fullName>Hypermarket</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>GasStation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>