force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Company_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Company_Type__c</fullName>
    <description>Defines the type of Customer.</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>OnTrade</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>ThirdParty</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>