force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Consider_Modules__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Modules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes, whether the account can be used for listing module classification.</description>
    <label>Consider Modules</label>
    <type>Checkbox</type>
</CustomField>