force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Id__c</fullName>
    <description>Reference to the customer to which the extension record is assigned.</description>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>