force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Customer_Role_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Role_Number__c</fullName>
    <description>Defines the Role number of the customer.</description>
    <label>Customer Role Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>