force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Customer_Role_Price_List_type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Role_Price_List_type__c</fullName>
    <description>Defines the Role Price List type from the customer.</description>
    <label>Customer Role Price List type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Direct Customer</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>