force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Customer_Role_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Role_Price_Type__c</fullName>
    <description>Defines the Role Price type from the customer.</description>
    <label>Customer Role Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>factory</fullName>
            </value>
            <value>
                <fullName>consumer</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>