force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Customer_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Role_Valid_From__c</fullName>
    <description>From this date on the Customer Role is valid.</description>
    <label>Customer Role Valid From</label>
    <type>Date</type>
</CustomField>