force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Customer_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Role_Valid_Thru__c</fullName>
    <description>Until this date the Customer Role is valid.</description>
    <label>Customer Role Valid Thru</label>
    <type>Date</type>
</CustomField>