force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Date_Closure__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Closure__c</fullName>
    <description>Date the company closed.</description>
    <label>Date Closure</label>
    <type>Date</type>
</CustomField>