force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Decreasing_PSI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Decreasing_PSI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the previous calculated PSI was higher than the last one.</description>
    <inlineHelpText>Indicates if the previous calculated PSI was higher than the last one.</inlineHelpText>
    <label>Decreasing PSI</label>
    <type>Checkbox</type>
</CustomField>