force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Decreasing_Revenue__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Decreasing_Revenue__c</fullName>
    <description>Defines if a customer is classified as decrease revenue customer.</description>
    <label>Decreasing Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>