force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Delivery_Role_Modify_Preset_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Role_Modify_Preset_Quantity__c</fullName>
    <description>Specifies in which way quantity modifications of preset quantities of delivery documents can be modified.</description>
    <inlineHelpText>This setting is observed only for special orders, deliveries, truck loads and free items generated via pricing</inlineHelpText>
    <label>Delivery Role Modify Preset Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Only Decrease</fullName>
            </value>
            <value>
                <fullName>Only Increase</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>