force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Delivery_Role_Number_Of_Printouts__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Role_Number_Of_Printouts__c</fullName>
    <description>--- Attribute no longer used --- Specifies the number of printouts of the delivery Role.</description>
    <label>Delivery Role Number Of Printouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>