force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Delivery_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Role_Valid_From__c</fullName>
    <description>From this date on the Delivery Role is valid.</description>
    <label>Delivery Role Valid From</label>
    <type>Date</type>
</CustomField>