force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Delivery_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Role_Valid_Thru__c</fullName>
    <description>Until this date the Delivery Role is valid.</description>
    <label>Delivery Role Valid Thru</label>
    <type>Date</type>
</CustomField>