force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Distribution_Issue__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if last relevant call (and then the customer) has distribution issues.</description>
    <inlineHelpText>Indicates if last relevant call (and then the customer) has distribution issues.</inlineHelpText>
    <label>Distribution Issue</label>
    <type>Checkbox</type>
</CustomField>