force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Fixed_Overdraw__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fixed_Overdraw__c</fullName>
    <description>Fixed-Based Overdraw Allowance Percentage.</description>
    <label>Fixed Overdraw %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>