force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Fund_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Role_Valid_From__c</fullName>
    <description>From this date on the Fund Role is valid.</description>
    <label>Fund Role Valid From</label>
    <type>Date</type>
</CustomField>