force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Fund_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Role_Valid_Thru__c</fullName>
    <description>Until this date the Fund Role is valid.</description>
    <label>Fund Role Valid Thru</label>
    <type>Date</type>
</CustomField>