force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Invoice_Document_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Invoice_Document_Transaction_Type__c</fullName>
    <description>Specifies how to handle invoice documents regarding payments.</description>
    <label>Invoice Document Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InvoiceCashInvoice</fullName>
            </value>
            <value>
                <fullName>InvoiceCreditInvoice</fullName>
            </value>
            <value>
                <fullName>NoPayment</fullName>
            </value>
            <value>
                <fullName>CreditMemo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>