force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Last_PSI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_PSI__c</fullName>
    <description>Last relevant calculated PSI.</description>
    <label>Last PSI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>