force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Visit_Date__c</fullName>
    <defaultValue>DATE(2000,01,01)</defaultValue>
    <description>Last customer call date relevant for KPI calculation.</description>
    <inlineHelpText>Last customer call date relevant for KPI calculation.</inlineHelpText>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>