force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Match_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Match_Code__c</fullName>
    <description>Matchcode of the business partner. Usually a concatenation of several encoded account attributes, e.g. Name + State + City -&gt; KROGER.GA.ATL.</description>
    <label>Match Code</label>
    <type>TextArea</type>
</CustomField>