force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Order_Document_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Document_Transaction_Type__c</fullName>
    <description>Specifies how to handle order documents regarding payments.</description>
    <label>Order Document Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CashOrder</fullName>
            </value>
            <value>
                <fullName>CreditOrder</fullName>
            </value>
            <value>
                <fullName>NoPaymentOrder</fullName>
            </value>
            <value>
                <fullName>VanSalesCashInvoice</fullName>
            </value>
            <value>
                <fullName>VanSalesNoPaymentInvoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>