force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Order_Role_Order_Template_Blocked__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Role_Order_Template_Blocked__c</fullName>
    <description>By this temporary order template blocking it is achieved, that this customer can not order them as long this flag is set.</description>
    <label>Order Role Order Template Blocked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>