force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Order_Role_Orderer_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Role_Orderer_Type__c</fullName>
    <description>Type of the ordering business partner: direct, indirect.</description>
    <label>Order Role Orderer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Replenishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>