force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Order_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Role_Valid_From__c</fullName>
    <description>From this date on the Order Role is valid.</description>
    <label>Order Role Valid From</label>
    <type>Date</type>
</CustomField>