force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Order_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Role_Valid_Thru__c</fullName>
    <description>Until this date the Order Role is valid.</description>
    <label>Order Role Valid Thru</label>
    <type>Date</type>
</CustomField>