force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Org_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Level__c</fullName>
    <description>Customer organization level classification.</description>
    <label>Org Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CustLevel01</fullName>
            </value>
            <value>
                <fullName>CustLevel02</fullName>
            </value>
            <value>
                <fullName>CustLevel03</fullName>
            </value>
            <value>
                <fullName>CustLevel04</fullName>
            </value>
            <value>
                <fullName>CustLevel05</fullName>
            </value>
            <value>
                <fullName>CustLevel06</fullName>
            </value>
            <value>
                <fullName>CustLevel07</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>