force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payer_Role_Credit_Block__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer_Role_Credit_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the customer is credit blocked or not.</description>
    <label>Payer Role Credit Block</label>
    <type>Checkbox</type>
</CustomField>