force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payer_Role_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer_Role_Credit_Rating__c</fullName>
    <description>Specifies the credit rating of the customer.</description>
    <label>Payer Role Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>