force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payer_Role_Document_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer_Role_Document_Transaction_Type__c</fullName>
    <description>Specifies how to handle delivery documents regarding payments.</description>
    <label>Delivery Document Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CashInvoice</fullName>
            </value>
            <value>
                <fullName>CreditInvoice</fullName>
            </value>
            <value>
                <fullName>ValuatedDeliveryNote</fullName>
            </value>
            <value>
                <fullName>NonValuatedDeliveryNote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>