force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payer_Role_Overall_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer_Role_Overall_Credit_Limit__c</fullName>
    <description>Specifies the overall credit limit for the customer.</description>
    <label>Payer Role Overall Credit Limit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>