force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payer_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer_Role_Valid_From__c</fullName>
    <description>From this date on the Payer Role is valid.</description>
    <label>Payer Role Valid From</label>
    <type>Date</type>
</CustomField>