force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payer_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer_Role_Valid_Thru__c</fullName>
    <description>Until this date the Payer Role is valid.</description>
    <label>Payer Role Valid Thru</label>
    <type>Date</type>
</CustomField>