force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Mode__c</fullName>
    <description>Preferred payment mode used when taking a payment during order taking.</description>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>DebitCard</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>MoneyOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>