force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Priority__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Priority__c</fullName>
    <description>Classification of a company.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Priority</fullName>
            </value>
            <value>
                <fullName>B - Priority</fullName>
            </value>
            <value>
                <fullName>C - Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>