force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Promotion_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Valid_From__c</fullName>
    <description>From this date on the Promotion Role is valid.</description>
    <label>Promotion Valid From</label>
    <type>Date</type>
</CustomField>