force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Promotion_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Valid_Thru__c</fullName>
    <description>Until this date the Promotion Role is valid.</description>
    <label>Promotion Valid Thru</label>
    <type>Date</type>
</CustomField>