force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__RBF_Overdraw__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Overdraw__c</fullName>
    <description>RBF-Based Overdraw Allowance Percentage.</description>
    <label>RBF Overdraw %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>