force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Organization</label>
    <referenceTo>cgcloud__Sales_Organization__c</referenceTo>
    <relationshipLabel>Customer Extensions</relationshipLabel>
    <relationshipName>Customer_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>