force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Sales_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes, whether the account can be used for sales activities. This attribute controls nothing, just for information.</description>
    <label>Sales Relevant</label>
    <type>Checkbox</type>
</CustomField>