force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__State__c</fullName>
    <description>Status of the account. Controls nothing, just information. Business partner roles are used for controlling instead.</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>090</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>