force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Store_Role_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Store_Role_Valid_From__c</fullName>
    <description>From this date on the Store Role is valid.</description>
    <label>Store Role Valid From</label>
    <type>Date</type>
</CustomField>