force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Store_Role_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Store_Role_Valid_Thru__c</fullName>
    <description>Until this date the Store Role is valid.</description>
    <label>Store Role Valid Thru</label>
    <type>Date</type>
</CustomField>