force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Tax_Jurisdiction_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tax_Jurisdiction_Code__c</fullName>
    <description>Describes where the taxes have to be paid.</description>
    <label>Tax Jurisdiction Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>