force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Transfer_Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transfer_Record_Identifier__c</fullName>
    <label>Transfer Record Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>