force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Transfer_Record_Identifier_Unique__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transfer_Record_Identifier_Unique__c</fullName>
    <description>A unique identifier that contains a combination of transfer record identifier and sales org values.</description>
    <label>Unique Transfer Record Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>