force-app/main/default/objects/cgcloud__Account_Extension__c/fields/cgcloud__Week_Day_Share_Profile__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Week_Day_Share_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Week Day Share Profile that is utilized for calculations for the referenced account.</description>
    <label>Week Day Share Profile</label>
    <referenceTo>cgcloud__Week_Day_Share_Profile__c</referenceTo>
    <relationshipLabel>Customer Extensions</relationshipLabel>
    <relationshipName>Customer_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>