force-app/main/default/objects/cgcloud__Account_Extension__c/validationRules/cgcloud__Broker_Role_Timeframe.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Broker_Role_Timeframe</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
      OR(
      AND(
      ISBLANK(cgcloud__Broker_Role_Valid_From__c),
      ISBLANK(cgcloud__Broker_Role_Valid_Thru__c)),
      AND(
      NOT ISBLANK(cgcloud__Broker_Role_Valid_From__c),
      NOT ISBLANK(cgcloud__Broker_Role_Valid_Thru__c),
      cgcloud__Broker_Role_Valid_From__c&lt;= cgcloud__Broker_Role_Valid_Thru__c)))</errorConditionFormula>
    <errorMessage>Valid From and Valid Thru can&apos;t be empty and Valid From can&apos;t be later than Valid Thru if the Role &apos;Broker&apos; is assigned to the Customer.</errorMessage>
</ValidationRule>